src/objects/Routing_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Sony Corp</fullName>
                </value>
                <value>
                    <fullName>Toshiba</fullName>
                </value>
                <value>
                    <fullName>ANY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_To_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Null_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Null Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Org</label>
        <referenceTo>Product_Org__c</referenceTo>
        <relationshipLabel>Routing Attributes</relationshipLabel>
        <relationshipName>Routing_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vaio</fullName>
                </value>
                <value>
                    <fullName>Saber</fullName>
                </value>
                <value>
                    <fullName>Walkman</fullName>
                </value>
                <value>
                    <fullName>ANY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_ID__c</fullName>
        <label>Queue ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00Gj0000001HRAlEAO</fullName>
                </value>
                <value>
                    <fullName>00Gj0000001HX7sEAG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Routing_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Routing Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Case_Routing_1_Routing_Attribute</fullName>
        <filterScope>Queue</filterScope>
        <label>Case Routing 1</label>
        <queue>Case_Routing_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_Routing_2_Routing_Attribute</fullName>
        <filterScope>Queue</filterScope>
        <label>Case Routing 2</label>
        <queue>Case_Routing_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RA-{0000000}</displayFormat>
        <label>Routing Attributes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>